--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -9,6 +9,7 @@
     --yellow: #fecd35;
     --red: #f05230;
     --darkgrey: #15171A;
+    --dark: #171717;
     --midgrey: #738a94;
     --lightgrey: #c5d2d9;
     --whitegrey: #e5eff5;
