--- a/default.hbs
+++ b/default.hbs
@@ -28,9 +28,12 @@
         {{!-- The footer at the very bottom of the screen --}}
         <footer class="site-footer outer">
             <div class="site-footer-content inner">
-                <section class="copyright"><a href="{{@site.url}}">{{@site.title}}</a> &copy; {{date format="YYYY"}}</section>
+                <section class="copyright">Copyright &copy; {{date format="YYYY"}} Flipper Devices Inc.</section>
+                {{#if @site.secondary_navigation}}
+                    {{navigation type="secondary"}}
+                {{/if}}
                 <nav class="site-footer-nav">
-                    <a href="https://flipperzero.one/#rec218760750" target="_blank" rel="noopener">Subscribe to updates</a>
+                    <a class="subscribe-link" href="#subscribe">Subscribe to updates</a>
                 </nav>
             </div>
         </footer>
@@ -48,9 +51,6 @@
         <a class="subscribe-close-overlay" href="#"></a>
         <a class="subscribe-close-button" href="#"></a>
         <div class="subscribe-overlay-content">
-            {{#if @site.logo}}
-                <img class="subscribe-overlay-logo" src="{{@site.logo}}" alt="{{@site.title}}" />
-            {{/if}}
             <div class="subscribe-form">
                 <h1 class="subscribe-overlay-title">Subscribe to {{@site.title}}</h1>
                 <p class="subscribe-overlay-description">Stay up to date! Get all the latest & greatest posts delivered straight to your inbox</p>
@@ -110,7 +110,7 @@
             });
 
             // Reset form on opening subscrion overlay
-            $('.subscribe-button').click(function() {
+            $('.subscribe-link').click(function() {
                 $('.subscribe-overlay form').removeClass();
                 $('.subscribe-email').val('');
             });
