--- a/post.hbs
+++ b/post.hbs
@@ -93,11 +93,12 @@ into the {body} of the default.hbs template --}}
                 {{> subscribe-form}}
             {{/if}}
 
-            {{!--
             <section class="post-full-comments">
-                If you want to embed comments, this is a good place to do it!
+                <script defer
+                    src="https://comments.flipperzero.one/js/commento.js">
+                </script>
+                <div id="commento"></div>
             </section>
-            --}}
 
         </article>
 
