--- a/post.hbs
+++ b/post.hbs
@@ -88,11 +88,8 @@ into the {body} of the default.hbs template --}}
                 </div>
             </section>
 
-            <section class="post-full-comments">
-                <script defer
-                    src="https://comments.flipperzero.one/js/commento.js">
-                </script>
-                <div id="commento"></div>
+            <section class="post-full-comments" id="comments">
+                <div id="remark42"></div>
             </section>
 
             {{!-- Email subscribe form at the bottom of the page --}}
