Update YouTube URL

--- a/default.hbs
+++ b/default.hbs
@@ -272,7 +272,7 @@
                             imgfield="tn_img_1584873111253"></a>
                 </div>
                 <div class="footer-social-el">
-                    <a class="tn-atom" href="https://www.youtube.com/channel/UCfKVWB_pOfsY-HQ2siMBn6g"><img
+                    <a class="tn-atom" href="https://youtube.com/flipperzero"><img
                             class="tn-atom__img"
                             src="https://static.tildacdn.com/tild3166-6364-4131-b030-623135373065/youtube.png"
                             imgfield="tn_img_1584873111259"></a>
