--- a/post.hbs
+++ b/post.hbs
@@ -68,7 +68,7 @@ into the {body} tag of the default.hbs template --}}
         {{content}}
     </section>
 
-    <section class="article-comments gh-canvas">
+    <section id="comments" class="article-comments gh-canvas">
         <div id="remark42"></div>
     </section>
 
