Update GitHub org link

--- a/default.hbs
+++ b/default.hbs
@@ -228,8 +228,7 @@
                         <h4>For developers</h4>
                         <div class="links">
                             <a href="https://flipperzero.one/developers">Developer Program</a>
-                            <a href="https://github.com/Flipper-Zero">Github</a>
-                            <a href="https://cla.flipperzero.one/Flipper-Zero/flipperzero-firmware-community">CLA</a>
+                            <a href="https://github.com/flipperdevices">Github</a>
                         </div>
                     </div>
                 </div>
