Change serif font

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -57,7 +57,7 @@ production stylesheet in assets/built/screen.css
 
     /* Fonts */
     --font-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-    --font-serif: Georgia, Times, serif;
+    --font-serif: charter, Georgia, Cambria, "Times New Roman", Times, serif;
     --font-mono: Menlo, Courier, monospace;
 
 }
