--- a/error-404.hbs
+++ b/error-404.hbs
@@ -35,3 +35,5 @@ were looking for, let's give them some alternative stuff to read. --}}
         {{/get}}
     </div>
 </aside>
+
+<script>plausible("404",{ props: { path: document.location.pathname } });</script>
