--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -449,7 +449,12 @@ h3 {
 
 h4 {
     margin: 1.5em 0 0.5em 0;
-    font-size: 2.2rem;
+    font-size: 2rem;
+}
+@media (max-width: 600px) {
+    h4 {
+        font-size: 1.7rem;
+    }
 }
 
 h5 {
