--- a/tag.hbs
+++ b/tag.hbs
@@ -2,12 +2,12 @@
 {{!-- The tag above means - insert everything in this file into the {body} of the default.hbs template --}}
 
 
-<section class="outer">
+<main id="site-main" class="site-main outer">
     <div class="inner posts">
         <div class="post-feed">
 
             {{#tag}}
-            <header class="post-card post-card-large">
+            <section class="post-card post-card-large">
                 {{#if feature_image}}
                 <div class="post-card-image-link">
                     {{!-- This is a responsive image, it loads different sizes depending on device
@@ -30,7 +30,7 @@
                             <div class="post-card-primary-tag">Tagged</div>
                             <h2 class="post-card-title">{{name}}</h2>
                         </header>
-                        <section class="post-card-excerpt">
+                        <div class="post-card-excerpt">
                             <p>
                                 {{#if description}}
                                 {{description}}
@@ -38,11 +38,11 @@
                                 A collection of {{plural ../pagination.total empty='zero posts' singular='% post' plural='% posts'}}
                                 {{/if}}
                             </p>
-                        </section>
+                        </div>
                     </div>
                 </div>{{!--/.post-card-content--}}
 
-            </header>
+            </section>
             {{/tag}}
 
             {{#foreach posts}}
@@ -54,4 +54,4 @@
 
         </div>
     </div>
-</section>
+</main>
