Add design guide link

--- a/default.hbs
+++ b/default.hbs
@@ -238,6 +238,7 @@
                         <div class="links">
                             <a href="https://flipperzero.one/developers">Developer Program</a>
                             <a href="https://github.com/flipperdevices">Github</a>
+                            <a href="https://flipperzero.one/design-guide">Design Guide</a>
                         </div>
                     </div>
                 </div>
